...
      title: product.title,
      heroImage: product.heroImage,
      price: product.price,
      quantity,
      maxQuantity: product.maxQuantity,
    })
    toast.show('Added to cart', {
      type: 'success',
      placement: 'top',
      duration: 2000,
    })
  }

  const totalPrice = (product.price * quantity).toFixed(2)

  return (
    <View style={styles.container}>
      <Stack.Screen options={{ title: product.title }} />

      <Image source={{ uri: product.heroImage }} style={styles.heroImage} />

      <View style={{ padding: 16, flex: 1 }}>
        <Text style={styles.title} testID="productTitle">
          Title: {product.title}
        </Text>
        <Text style={styles.slug} testID="productSlug">
          Slug: {product.slug}
        </Text>
        <View style={styles.priceContainer}>
          <Text style={styles.price} testID="productPrice">
            Unit Price: ${product.price.toFixed(2)}
          </Text>
          <Text style={styles.price} testID="totalPrice">
            Total Price: ${totalPrice}
          </Text>
        </View>
...
          <Text style={styles.quantity}>{quantity}</Text>

          <TouchableOpacity
            style={styles.quantityButton}
            onPress={increaseQuantity}
            disabled={quantity >= product.maxQuantity}
            testID="increaseQuantityButton"
          >
            <Text style={styles.quantityButtonText}>+</Text>
          </TouchableOpacity>

          <TouchableOpacity
            style={[
...
