...
        options={({ navigation }) => ({
          headerShown: true,
          headerTitleAlign: 'center',
          headerLeft: () => (
            <TouchableOpacity
              onPress={() => navigation.goBack()}
              testID="backButton"
            >
              <Ionicons name="arrow-back" size={24} color={'black'} />
            </TouchableOpacity>
          ),
        })}
      />
...
