...
        </View>
        <View style={styles.headerRight}>
          <Link
            style={styles.cartContainer}
            href="/cart"
            asChild
            testID="cartButton"
          >
            <Pressable>
              {({ pressed }) => (
                <View>
                  <FontAwesome
                    name="shopping-cart"
...
