appId: com.cengdong.rnshop
---
- runScript: ../lib/getRandomProduct.js
- runFlow: ../signin/signin-success-flow.yaml
# 滚动到产品名称可见
- scrollUntilVisible:
    element:
      text: ${output.product.randomProduct.name}
    direction: DOWN
# 查看产品详情
- tapOn: ${output.product.randomProduct.name}
- assertVisible:
    id: 'productTitle'
    text: ${output.product.productTitleText}
- assertVisible:
    id: 'productSlug'
    text: ${output.product.productSlugText}
- assertVisible:
    id: 'productPrice'
    text: ${output.product.productPriceText}
- assertVisible:
    id: 'totalPrice'
# 增加需要购买的数量
- repeat:
    times: ${output.product.buyCount}
    commands:
      - tapOn:
          id: increaseQuantityButton
- assertVisible:
    id: totalPrice
    text: ${output.product.detailTotalPriceText}
- tapOn: Add to cart
- assertVisible: Added to cart
# 返回首页
- tapOn:
    id: backButton
- scrollUntilVisible:
    element:
      id: cartButton
    direction: UP
- tapOn:
    id: cartButton
- assertVisible:
    text: ${output.product.randomProduct.name}
- assertVisible:
    id: totalPrice
    text: ${output.product.cartTotalPriceText}
